--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Freelancer Kit</title>
+    <title>Spring Boot App</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
 
     <link rel="stylesheet" href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>
@@ -16,7 +16,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a href="/" class="navbar-brand">Freelancer Kit</a>
+                <a href="/" class="navbar-brand">Spring Boot App</a>
                 <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -43,7 +43,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p class="text-center">SivaLabs &copy; 2018</p>
+            <p class="text-center">knitesh.com &copy; 2018</p>
         </div>
     </footer>
 
